# multi_base_calc

./: Cargo.toml  README.md
crates/calc_core/: Cargo.toml
crates/calc_core/src/: error.rs  lib.rs
crates/calc_core/tests/: acceptance.rs  addition.rs  basic_ops.rs  format.rs  parentheses.rs  parse.rs
crates/calc_wasm/: Cargo.toml  index.html  style.css
crates/calc_wasm/src/: lib.rs
