[package]
name = "calc_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
calc_core = { path = "../calc_core" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlButtonElement",
    "HtmlInputElement",
    "KeyboardEvent",
    "Window",
] }
